ETD Release Notes
=================
Version 1.8 - <date> (enhancements)
 * Collections config has been consolidated in schools.xml

Deployment notes:
 * Remove honors_collection section from config.xml
 * Remove collections section from config.xml
 * Run the following migrations / scripts
-  create_collections.php
-  015-add-rollins-programs.php
-  016-add-prog_codes_to_skos.php - before running this script, 
    manually edit the config.xml defined programs_pid.
    Select the SKOS datastream for edit, then add this attribute to first line:
    xmlns:dc="http://purl.org/dc/elements/1.1/"

Version 1.7.3 - August 2010 (bugfix)
 * Fixed bug in etdSet code which caused email templates to not function correctly.
* Fixed bug in etd search filtering. 


Version 1.7.2 - August 2010 (bugfix)
 * Fixed bug in embargo_expiration script.

Version 1.7.3 - August 2010 (bugfix)
 * Fixed bug in etdSet code which caused email templates to not function correctly.
* Fixed bug in etd search filtering.

Version 1.7.2 - August 2010 (bugfix)
 * Fixed bug in embargo_expiration script.
 
Version 1.7.1 - August 2010 (bugfix)
 * Fixed bug in pagination code in searchController that caused results with one item to fail.
 * Changed link to ETD Help page on side nav.

Version 1.7 - August 2010 (enhancements)

 * Site news and subject documents are now pulled from an RSS feed from tagged content on
   the Digital Libraries drupal site
 * Open Flash Chart Version 2 Lug Wyrm Charmer
    download at http://sourceforge.net/projects/openflashchart/files/ 
    open-flash-chart-2-Lug-Wyrm-Charmer.zip (5.0 MB   2009-07-27    68,688)
    Note: modified OFC_Charts_Bar_Stack.php to allow for stacked bar chart legend key to display.
 * Output of the publication script now has enough information to determine which non-honors undergrad are skipped.
 * The OAI harvester that harvests ETD records by OAI set now receives a single
   copy of each ETD record in that set.