@@ -71,6 +71,11 @@ $esd = Zend_Db::factory($esdconfig);
 Zend_Registry::set('esd-db', $esd);
 Zend_Db_Table_Abstract::setDefaultAdapter($esd);
 
+// create DB object for access to etd MySQL database
+$etdDBconfig = new Zend_Config_Xml($config_dir . 'etd-db.xml', $env_config->mode);
+Zend_Registry::set('etd-db-config', $etdDBconfig);
+$etdDB = Zend_Db::factory($etdDBconfig);
+Zend_Registry::set('etd-db', $etdDB);
 
 //set default timezone
 date_default_timezone_set($config->timezone);
